# wnba_betting_analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
resources/: sample_game_data.json
wnba/: app.py  constants.py  main.py  processor.py  setup_data.py
wnba/models/: boxscore.py  game.py  player.py  player_boxscore.py  team.py  team_boxscore.py
wnba/resources/: score_board.json
wnba/routes/: router.py
wnba/routes/boxscores/: __init__.py  boxscore_router.py  boxscore_utils.py  import_boxscore_on_date.py  import_boxscore_single.py
wnba_betting_analysis/: app.py  config.py  setup_data.py
wnba_betting_analysis/models/: game.py  player.py  player_boxscore.py  team.py  team_boxscore.py
wnba_betting_analysis/resources/: list_teams.json
wnba_betting_analysis/routes/: router.py
wnba_betting_analysis/routes/boxscores/: __init__.py  boxscore_router.py  boxscore_utils.py  import_boxscore_on_date.py
