[project]
name="wnba_betting_analysis"
version="0.0.0"
readme = "README.md"
authors = [
    { name = "Garrett Folbe", email = "gmfolbe@yahoo.com" },
]

[project.urls]
repository = "https://github.com/gfolbe318/wnba_betting_analysis"

[build-system]
requires= ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pyright]
venvPath = "."
venv = "venv"